[package]
name = "rzlinkhelper-rs"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json = {version = "0.2.2", features = ["serde"]}
serde = { version = "1.0.104", features = ["derive"]}
rayon = "1.3.0"
lazy_static = "1.4.0"
hashbrown = "0.6.3"
log = {version = "0.4"}
pretty_env_logger = "0.3.1"
num_cpus = "1.11.1"
serde_json = "1.0.44"
percent-encoding = "2.1.0"
crossbeam = "0.7.3"
mimalloc = { version = "*", default-features = false }
